[package]
name = "poc_htmltopdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
env_logger = "0.9.0"
failure = "0.1.8"
headless_chrome = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.16"
notify = "4.0.17"
uuid = { version = "1.0.0", features = ["v4"] }
